# cpp-lab-4

./: CMakeLists.txt  README.md  main.cpp
src/: App.cpp  App.h
src/Geometry/: Ellipse.cpp  Ellipse.h  Figure.h  Triangle.cpp  Triangle.h
src/Service/: ConsoleDisplayService.h  DisplayServiceInterface.h  ExceptionService.h  FigureContaienr.cpp  FigureContainer.h
